--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -7,16 +7,6 @@
     android:background="@drawable/back"
     tools:context=".Search_result">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="173dp"
-        android:layout_height="168dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/book1" />
-
     <TextView
         android:id="@+id/name_show"
         android:layout_width="0dp"
@@ -54,13 +44,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/add_borrow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/add_borrow"
@@ -84,4 +72,14 @@
         app:layout_constraintEnd_toEndOf="@+id/publisher_show"
         app:layout_constraintStart_toStartOf="@+id/publisher_show"
         app:layout_constraintTop_toBottomOf="@+id/publisher_show" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="174dp"
+        android:layout_height="147dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
