--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,37 +7,99 @@
     android:background="@drawable/back"
     >
 
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="64dp"
-        android:layout_height="59dp"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fam_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/menu"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/fam_user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:menu_colorNormal="@android:color/transparent"
+        app:menu_colorPressed="#99FFFFFF"
+        app:menu_colorRipple="#99FFFFFF"
+        app:menu_icon="@drawable/menu"
+        app:menu_labels_position="right"
+        app:menu_openDirection="down">
 
-    <ImageButton
-        android:id="@+id/person"
-        android:layout_width="64dp"
-        android:layout_height="59dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/user"
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#dbc9a0"
+            app:fab_colorPressed="#e0cfa8"
+            app:fab_label="首頁"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_orderList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#dbc9a0"
+            app:fab_colorPressed="#e0cfa8"
+            app:fab_label="預借清單"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fabHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#dbc9a0"
+            app:fab_colorPressed="#e0cfa8"
+            app:fab_label="借閱紀錄"
+            app:fab_size="mini" />
+    </com.github.clans.fab.FloatingActionMenu>
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fam_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toEndOf="@+id/fam_menu"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu_colorNormal="@android:color/transparent"
+        app:menu_colorPressed="#99FFFFFF"
+        app:menu_colorRipple="#99FFFFFF"
+        app:menu_icon="@drawable/user"
+        app:menu_labels_position="left"
+        app:menu_openDirection="down">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_label="登入"
+            app:fab_size="mini"
+            app:fab_colorNormal="#dbc9a0"
+            app:fab_colorPressed="#e0cfa8"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_label="登出"
+            app:fab_size="mini"
+            app:fab_colorNormal="#dbc9a0"
+            app:fab_colorPressed="#e0cfa8"/>
+    </com.github.clans.fab.FloatingActionMenu>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="79dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="57dp"
+        android:layout_marginEnd="64dp"
+        android:gravity="center_horizontal"
         android:text="借閱紀錄"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintEnd_toStartOf="@+id/person"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/menu"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
