--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -44,11 +44,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/add_borrow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/add_borrow"
