--- a/app/src/main/res/layout/activity_add_book_manager.xml
+++ b/app/src/main/res/layout/activity_add_book_manager.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    tools:context=".book_manager">
+    tools:context=".manager_addBook">
 
     <EditText
         android:id="@+id/book_name_add"
