--- a/app/src/main/res/layout/activity_menu_manager.xml
+++ b/app/src/main/res/layout/activity_menu_manager.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_bookman"
+        android:id="@+id/btn_add_book"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -40,24 +40,24 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="36dp"
-        android:text="書籍管理"
-        app:layout_constraintBottom_toTopOf="@+id/book_status"
+        android:text="新增書籍"
+        app:layout_constraintBottom_toTopOf="@+id/btn_book_manage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
-        android:id="@+id/book_status"
+        android:id="@+id/btn_book_manage"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="128dp"
-        android:text="書籍狀態"
+        android:text="書籍管理"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_bookman" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_add_book" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
