--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -47,6 +47,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="32dp"
+        android:scrollbars="vertical"
+        android:singleLine="false"
         app:layout_constraintBottom_toTopOf="@+id/add_borrow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
