--- a/app/src/main/res/layout/books_return_layout.xml
+++ b/app/src/main/res/layout/books_return_layout.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:onClick="onBorrowButtonClick2"
         android:text="借書"
         app:layout_constraintEnd_toStartOf="@+id/btn_returnBook"
         app:layout_constraintTop_toTopOf="@+id/tv_return_state" />
@@ -46,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:onClick="onReturnButtonClick"
         android:text="還書"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_return_borrowAgain" />
